minor fix for "Make text invisible"

--- a/src/content/opt-out.css
+++ b/src/content/opt-out.css
@@ -1,10 +1,16 @@
 :root {
     --color: rgb(255, 255, 255);
 }
+
 .opt-out-tw {
     color: var(--color, white);
 }
+
 .opt-out-tw a {
+    color: var(--color, white);
+}
+
+.opt-out-tw span {
     color: var(--color, white);
 }
 
